# dambi

./: .dockerignore  .env.example  .env.ext.example  .env.local.example  .gitignore  .gitleaks.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  VERIFICATION_UNISWAP_REALTX.md  clippy.toml  index.html  package.json  privacy-policy.md  scopeball-spenders.toml
.github/workflows/: ci.yml  extension-release.yml  policy-server-deploy.yml  policy-server.yml  registry-proxy-deploy.yml  registry-publish.yml  release.yml
adapter-registry/: Dockerfile  nginx.conf  package.json
adapter-registry/public/: manifest.json
adapter-registry/scripts/: build-manifest.js
adapter-registry/tests/: README.md
browser-extension/: .env.example  package-lock.json  package.json  vitest.config.ts
browser-extension/backend/: manifest.json
browser-extension/dashboard/: package.json  param-editor-mockup.html  vite.config.ts  vitest.config.ts
browser-extension/frontend/: tokens.css
browser-extension/public/: method-catalog.json  popup.html  welcome.html
browser-extension/scripts/: build-webstore-zip.js  copy-default-policies.js  copy-method-catalog.js  validate-dist.js
browser-extension/sdk/: extension-client.ts  policy-store-types.ts
browser-extension/src/: pe-wasm.ts  router.ts
browser-extension/webpack/: env.js  webpack.common.js  webpack.prod.js
crates/adapter-sdk-macros/: Cargo.toml
crates/adapters-bundle/: Cargo.toml
crates/adapters/aerodrome-slipstream/: Cargo.toml
crates/adapters/aerodrome-slipstream/src/: common.rs  exact_input.rs  exact_input_single.rs  exact_output.rs  exact_output_single.rs  lib.rs
crates/adapters/aerodrome-v1/: Cargo.toml
crates/adapters/aerodrome-v1/src/: common.rs  lib.rs  swap_exact_eth_for_tokens.rs  swap_exact_tokens_for_eth.rs  swap_exact_tokens_for_tokens.rs
crates/adapters/pancakeswap-amm/: Cargo.toml
crates/adapters/pancakeswap-amm/src/: common.rs  lib.rs  swap_eth_for_exact_tokens.rs  swap_exact_eth_for_tokens.rs  swap_exact_tokens_for_eth.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_eth.rs  swap_tokens_for_exact_tokens.rs
crates/adapters/pancakeswap-stableswap/: Cargo.toml
crates/adapters/pancakeswap-stableswap/src/: common.rs  exchange.rs  lib.rs
crates/adapters/pancakeswap-v3/: Cargo.toml
crates/adapters/pancakeswap-v3/src/: common.rs  exact_input.rs  exact_input_single.rs  exact_output.rs  exact_output_single.rs  lib.rs  multicall.rs
crates/integration-tests/: .gitignore  ACTIONBODY_EXTENSION_GUIDE.md  Cargo.toml  ONBOARDING_EVIDENCE_TEMPLATE.md  ONBOARDING_PROMPT.md  PROTOCOL_AGNOSTIC_ONBOARDING_FRAMEWORK.md  PROTOCOL_ONBOARDING_AND_TESTING.md  README.md
crates/policy-builder/: Cargo.toml  build.rs
crates/policy-builder-wasm/: Cargo.toml
crates/policy-builder-wasm/src/: lib.rs
crates/policy-builder/src/: escape.rs  generator.rs  lib.rs  operators.rs  parser.rs  types.rs  validate.rs
crates/policy-builder/src/schemas/: mod.rs  swap.rs
crates/policy-builder/tests/: roundtrip.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine-wasm/: Cargo.toml
crates/policy-engine-wasm/src/: action_eval_exports.rs  cedar_exports.rs  declarative_exports.rs  diagnosis_exports.rs  dto.rs  exports.rs  helpers.rs  lib.rs  policy_request_exports.rs  sim_types.rs  trigger_exports.rs
crates/policy-engine-wasm/tests/: approval_allowance_e2e.rs  cedar_text_est_roundtrip.rs  declarative_v3_route.rs  declarative_v3_typed_data_install.rs  est_roundtrip.rs  gitbook_perp_policies_e2e.rs  hl_exchange_deny_e2e.rs  token_reputation_eval_e2e.rs
crates/policy-engine-wasm/tests/fixtures/default_policies_v2/: bridge-unlimited-approval-deny.cedar  nft-bid-weth-unlimited-warn.cedar  nft-zero-price-sale-deny.cedar  permit-allowance-horizon-warn.cedar  unlimited-approval-deny.cedar
crates/policy_engine_wasm/: Cargo.toml
crates/web-server/: Cargo.toml
docs/: ACTIONBODY_EXTENSION_GUIDE.md
extension/: .gitignore  README.md  package.json
policy-rpc/: Dockerfile  README.md  package-lock.json  package.json
policy-schema/: core.cedarschema
registry/: package.json
registry-api/: README.md  package-lock.json  package.json
registryV2/: README.md  package-lock.json  package.json
schema/: CLAUDE.md  method-catalog.README.md  method-catalog.json
scripts/: capture_baseline.sh  e2e-adapter-toolchain.sh  e2e-loader.sh  gh-safe.sh  lint.sh  serve.sh  test-all.sh  wasm-build-policy-builder.sh  wasm-build.sh
(+2242 files in other folders)
