[package]
name = "policy-builder-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "WASM bridge for policy-builder. Exposes schema introspection and rule compilation to JS."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
policy-builder.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
