[package]
name = "policy-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured rule -> Cedar policy text compiler. Schema-driven; used by the policy editor UI."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
policy-engine.workspace = true
serde_json.workspace = true
