[package]
name = "policy-engine-adapter-aerodrome-slipstream"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aerodrome Slipstream (concentrated-liquidity, tickSpacing-keyed) SwapRouter adapters for policy-engine"

[dependencies]
policy-engine.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true
