[package]
name = "policy-engine-adapter-aerodrome-v1"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aerodrome V1 (Solidly fork) Router swap-function adapters for policy-engine"

[dependencies]
policy-engine.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true
