[package]
name = "policy-engine-adapter-pancakeswap-amm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PancakeSwap V2 (AMM) Router swap-function adapters for policy-engine"

[dependencies]
policy-engine.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true
